mejoras varias- colores- render- css